--- a/views/index.jade
+++ b/views/index.jade
@@ -16,6 +16,8 @@ html
   body(data-ng-app="kitApp")
     #container
       .kit-editor(data-kit-editor)
+        //- button(data-ng-click="center($event)" {{ editor.testValue | uppercase }}
+        button(data-ng-click="center($event)" data-ng-bind="editor.testValue | uppercase") C
 
   //- <script src="/build/combined.js"></script>
   script(src="/build/combined.js")
