--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ html
     #container
       .kit-editor(data-kit-editor)
         //- button(data-ng-click="center($event)" {{ editor.testValue | uppercase }}
-        button(data-ng-click="center($event)" data-ng-bind="editor.testValue | uppercase") C
+        button(data-ng-click="center($event)" data-ng-bind="editor.testValue | uppercase")
 
   //- <script src="/build/combined.js"></script>
   script(src="/build/combined.js")
