--- a/views/index.jade
+++ b/views/index.jade
@@ -18,6 +18,7 @@ html
       .kit-editor(data-kit-editor)
         //- button(data-ng-click="center($event)" {{ editor.testValue | uppercase }}
         button(data-ng-click="center($event)" data-ng-bind="editor.testValue | uppercase")
+        div(data-kit-pallete)
 
   //- <script src="/build/combined.js"></script>
   script(src="/build/combined.js")
